@@ -307,6 +307,4 @@ Volunteers for these and other projects are welcome!
      to find a string that does not appear elsewhere in the current
      file should produce a message on the status line.
 
-158. Have a `make' button.
-
 159. (Insert your project idea here)
