@@ -97,6 +97,7 @@ GDBAgent::GDBAgent (XtAppContext app_context,
       _has_pwd_command(tp == GDB || tp == DBX),
       _has_setenv_command(tp == DBX),
       _has_edit_command(tp == DBX),
+      _has_make_command(tp == GDB || tp == DBX),
       _has_named_values(tp == GDB || tp == DBX),
       _has_when_command(tp == DBX),
       _has_when_semicolon(tp == DBX),
@@ -158,6 +159,7 @@ GDBAgent::GDBAgent(const GDBAgent& gdb)
       _has_pwd_command(gdb.has_pwd_command()),
       _has_setenv_command(gdb.has_setenv_command()),
       _has_edit_command(gdb.has_edit_command()),
+      _has_make_command(gdb.has_make_command()),
       _has_named_values(gdb.has_named_values()),
       _has_when_command(gdb.has_when_command()),
       _has_when_semicolon(gdb.has_when_semicolon()),
@@ -1050,6 +1052,31 @@ string GDBAgent::pwd_command() const
     }
 
     return "";			// Never reached
+}
+
+// Some DBXes want `sh make' instead of `make'
+string GDBAgent::make_command(string args) const
+{
+    string cmd;
+    switch (type())
+    {
+    case GDB:
+    case DBX:
+	if (has_make_command())
+	    cmd = "make";
+	else
+	    cmd = "sh make";
+	break;
+
+    case XDB:
+	cmd = "!make";
+	break;
+    }
+
+    if (args == "")
+	return cmd;
+    else
+	return cmd + " " + args;
 }
 
 string GDBAgent::frame_command(string depth) const
