@@ -37,6 +37,8 @@
 #include "strclass.h"
 
 void gdbRunCB(Widget w, XtPointer, XtPointer);
+void gdbMakeCB(Widget w, XtPointer, XtPointer);
+void gdbMakeAgainCB(Widget w, XtPointer, XtPointer);
 
 void add_to_arguments(string line);
 void update_arguments();
